fix earth rendering outside of viewport on small screen height (temp)

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -9,7 +9,7 @@ body {
 .starry-hero {
     background-color: var(--background);
     width: 100%;
-    height: 60vh;
+    height: auto; // TODO: replace with screen size considerate when stars are put in?
 }
 
 .curve-body {
